# death_protocol

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/healthchecks/: telegram.rs
src/healthchecks/telegram/: checkers.rs  mod.rs
src/healthchecks/telegram/checkers/: mod.rs
src/healthchecks/telegram/dialogue/: mod.rs
src/healthchecks/telegram/dialogue/states/: checked.rs  mod.rs  start.rs
